--- a/jQuery-Exercicio/index.html
+++ b/jQuery-Exercicio/index.html
@@ -22,7 +22,7 @@
 
     <ul>
       <li class="done">trocar a lampada do quarto</li>
-      <li>Outra tarefa qualquer</li>
+      <li>Outra tarefa qualquer teste</li>
     </ul>  
   </div>
   
