--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <header>
+    TESTE
     <h1>Galeria de fotos</h1>
     <button type="button">Nova imagem +</button>
   </header>
